--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,98 +1,21 @@
-@article{dickinson2015pragmatic,
-  title={Pragmatic cluster randomized trials using covariate constrained randomization: A method for practice-based research networks (PBRNs)},
-  author={Dickinson, L Miriam and Beaty, Brenda and Fox, Chet and Pace, Wilson and Dickinson, W Perry and Emsermann, Caroline and Kempe, Allison},
-  journal={The Journal of the American Board of Family Medicine},
-  volume={28},
-  number={5},
-  pages={663--672},
-  year={2015},
-  publisher={Am Board Family Med}
+@article{emrich1991method,
+  title={A method for generating high-dimensional multivariate binary variates},
+  author={Emrich, Lawrence J and Piedmonte, Marion R},
+  journal={The American Statistician},
+  volume={45},
+  number={4},
+  pages={302--304},
+  year={1991},
+  publisher={Taylor \& Francis}
 }
 
-
-
-@article{gail1996design,
-  title={On design considerations and randomization-based inference for community intervention trials},
-  author={Gail, Mitchell H and Mark, Steven D and Carroll, Raymond J and Green, Sylvan B and Pee, David},
-  journal={Statistics in medicine},
-  volume={15},
-  number={11},
-  pages={1069--1092},
-  year={1996},
-  publisher={Wiley Online Library}
-}
-
-@article{raab2001balance,
-  title={Balance in cluster randomized trials},
-  author={Raab, Gillian M and Butcher, Izzy},
-  journal={Statistics in medicine},
-  volume={20},
-  number={3},
-  pages={351--365},
-  year={2001},
-  publisher={Wiley Online Library}
-}
-
-@article{li2016evaluation,
-  title={An evaluation of constrained randomization for the design and analysis of group-randomized trials},
-  author={Li, Fan and Lokhnygina, Yuliya and Murray, David M and Heagerty, Patrick J and DeLong, Elizabeth R},
-  journal={Statistics in medicine},
-  volume={35},
-  number={10},
-  pages={1565--1579},
-  year={2016},
-  publisher={Wiley Online Library}
-}
-
-
-@article{hannan1994parameters,
-  title={Parameters to aid in the design and analysis of community trials: intraclass correlations from the Minnesota Heart Health Program},
-  author={Hannan, Peter J and Murray, David M and Jacobs Jr, David R and McGovern, Paul G},
-  journal={Epidemiology},
-  pages={88--95},
-  year={1994},
-  publisher={JSTOR}
-}
-
-@article{eldridge2009intra,
-  title={The Intra-Cluster Correlation Coefficient in Cluster Randomized Trials: A Review of Definitions},
-  author={Eldridge, Sandra M and Ukoumunne, Obioha C and Carlin, John B},
-  journal={International Statistical Review},
-  volume={77},
-  number={3},
-  pages={378--394},
-  year={2009},
-  publisher={Wiley Online Library}
-}
-
-
-@article{li2017evaluation,
-  title={An evaluation of constrained randomization for the design and analysis of group-randomized trials with binary outcomes.},
-  author={Li, F and Turner, EL and Heagerty, PJ and Murray, DM and Vollmer, WM and DeLong, ER},
-  journal={Statistics in medicine},
-  volume={36},
-  number={24},
-  pages={3791},
-  year={2017}
-}
-
-@article{greene2017sas,
-  title={A SAS macro for covariate-constrained randomization of general cluster-randomized and unstratified designs},
-  author={Greene, Erich J},
-  journal={Journal of statistical software},
-  volume={77},
-  number={CS1},
-  year={2017},
-  publisher={NIH Public Access}
-}
-
-@article{bailey1987valid,
-  title={Valid randomization},
-  author={Bailey, RA and Rowley, CA},
-  journal={Proceedings of the Royal Society of London. A. Mathematical and Physical Sciences},
-  volume={410},
-  number={1838},
-  pages={105--124},
-  year={1987},
-  publisher={The Royal Society London}
+@article{qaqish2003family,
+  title={A family of multivariate binary distributions for simulating correlated binary variables with specified marginal means and correlations},
+  author={Qaqish, Bahjat F},
+  journal={Biometrika},
+  volume={90},
+  number={2},
+  pages={455--463},
+  year={2003},
+  publisher={Oxford University Press}
 }
